// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render icon variant 1`] = `
.c0 {
  position: relative;
  border: 0;
  display: inline-block;
  background: transparent;
  cursor: pointer;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  padding: 16px;
  margin: 8px;
  font-size: 1.2rem;
  border-radius: 44px;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  opacity: 0.9;
}

<button
  class="c0"
>
  <svg
    fill="none"
    height="24"
    role="img"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      Github icon
    </title>
    <path
      d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
    />
  </svg>
  <canvas
    height="0"
    style="border-radius: inherit; height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
    width="0"
  />
</button>
`;

exports[`Button should render outlined variant 1`] = `
.c0 {
  position: relative;
  border: 0;
  display: inline-block;
  background: transparent;
  cursor: pointer;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  padding: 16px;
  margin: 8px;
  font-size: 1.2rem;
  border-radius: 44px;
  background-color: white;
  border-radius: 44px;
  border: 2px solid #452984;
  color: #452984;
}

.c0:hover {
  opacity: 0.9;
}

<button
  class="c0"
>
  Learn More
  <canvas
    height="0"
    style="border-radius: inherit; height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
    width="0"
  />
</button>
`;

exports[`Button should render primary button if no props are passed 1`] = `
.c0 {
  position: relative;
  border: 0;
  display: inline-block;
  background: transparent;
  cursor: pointer;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  padding: 16px;
  margin: 8px;
  font-size: 1.2rem;
  border-radius: 44px;
  color: white;
  background-color: #452984;
  -webkit-transition: 0.2s background ease;
  transition: 0.2s background ease;
}

.c0:hover {
  opacity: 0.9;
  background-color: #5D48A7;
}

<button
  class="c0"
>
  Sign In
  <canvas
    height="0"
    style="border-radius: inherit; height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
    width="0"
  />
</button>
`;

exports[`Button should work with the as prop and other styled-system ones 1`] = `
.c0 {
  position: relative;
  border: 0;
  display: inline-block;
  background: transparent;
  cursor: pointer;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  padding: 16px;
  margin: 8px;
  font-size: 1.2rem;
  border-radius: 44px;
  padding: 8px;
  color: white;
  background-color: #452984;
  -webkit-transition: 0.2s background ease;
  transition: 0.2s background ease;
}

.c0:hover {
  opacity: 0.9;
  background-color: #5D48A7;
}

<a
  class="c0"
>
  Just test
  <canvas
    height="0"
    style="border-radius: inherit; height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
    width="0"
  />
</a>
`;
